--- a/WebApp-ebuilder/Web.config
+++ b/WebApp-ebuilder/Web.config
@@ -9,10 +9,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="RolesConfigKey" value="Managerial,Non-Managerial,HR Admin"/>
+    
   </appSettings>
   <system.web>
     <authentication mode="Forms">
-      <forms cookieless="UseCookies" loginUrl="~/Employees/Login" slidingExpiration="true"></forms>
+      <forms cookieless="AutoDetect" loginUrl="~/Employees/Login" protection="All" name=".ASPXAUTH"  path="/" requireSSL="false" slidingExpiration="true" enableCrossAppRedirects="false"></forms>
     </authentication>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
