--- a/WebApp-ebuilder/WebApp-ebuilder.csproj
+++ b/WebApp-ebuilder/WebApp-ebuilder.csproj
@@ -143,9 +143,13 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Authorizer\CustomAuthorizeAttribute.cs" />
     <Compile Include="Authorizer\CustomPrincipal.cs" />
+    <Compile Include="Controllers\AttendanceController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\DutyLeavesController.cs" />
     <Compile Include="Controllers\EmployeesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LeavesController.cs" />
+    <Compile Include="Controllers\TasksController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -164,6 +168,7 @@
     <Compile Include="Views\BaseViewPage.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-flatly.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -203,6 +208,13 @@
     <Content Include="Views\Employees\Register.cshtml" />
     <Content Include="Views\Employees\Login.cshtml" />
     <Content Include="Views\Home\Dashboard.cshtml" />
+    <Content Include="Views\Leaves\ApplyLeave.cshtml" />
+    <Content Include="Views\DutyLeaves\TrackLocation.cshtml" />
+    <Content Include="Views\DutyLeaves\ApplyDutyLeave.cshtml" />
+    <Content Include="Views\Shared\_LayoutLoggedIn.cshtml" />
+    <Content Include="Views\Attendance\ViewAttendance.cshtml" />
+    <Content Include="Views\Leaves\ViewLeaves.cshtml" />
+    <Content Include="Views\Tasks\ViewTasks.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -241,7 +253,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>49726</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:49726/</IISUrl>
+          <IISUrl>http://localhost:49725/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
