--- a/WebApp-ebuilder/WebApp-ebuilder.csproj
+++ b/WebApp-ebuilder/WebApp-ebuilder.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Models\attendance.cs" />
     <Compile Include="Models\attendanceView.cs" />
     <Compile Include="Models\attendanceWithWorkingHours.cs" />
+    <Compile Include="Models\changePasswordCredentials.cs" />
     <Compile Include="Models\Chart.cs" />
     <Compile Include="Models\count.cs" />
     <Compile Include="Models\customPrincipalSerializeModel.cs" />
@@ -353,6 +354,12 @@
     <Content Include="Views\Leaves\ViewLeaveChart.cshtml" />
     <Content Include="Views\Shared\_NewLayoutManagerial.cshtml" />
     <Content Include="Views\Attendance\ViewAttendanceChart.cshtml" />
+    <Content Include="Views\Employees\Settings.cshtml" />
+    <Content Include="Views\Employees\ChangePassword.cshtml" />
+    <Content Include="Views\Employees\Profile.cshtml" />
+    <Content Include="Views\Shared\_NewLayoutAdmin.cshtml" />
+    <Content Include="Views\Employees\ViewProfile.cshtml" />
+    <Content Include="Views\Employees\Manage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
