Addd employee details, updated change password, forgot password to have min 8 characters

--- a/WebApp-ebuilder/WebApp-ebuilder.csproj
+++ b/WebApp-ebuilder/WebApp-ebuilder.csproj
@@ -373,6 +373,8 @@
     <Content Include="Views\Leaves\ViewLeaves.cshtml" />
     <Content Include="Views\Leaves\Edit.cshtml" />
     <Content Include="Views\Leaves\Delete.cshtml" />
+    <Content Include="Views\Employees\Details.cshtml" />
+    <Content Include="Views\DutyLeaves\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
